snapshots/DeepSpeech/native_client/kenlm/lm/interpolate/tune_matrix.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 18
kind: unit
spaces:
  - name: lm
    start_line: 10
    end_line: 17
    kind: namespace
    spaces:
      - name: interpolate
        start_line: 10
        end_line: 17
        kind: namespace
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 5
            total_operators: 11
            unique_operands: 7
            total_operands: 7
            length: 18
            estimated_program_length: 31.261
            purity_ratio: 1.737
            vocabulary: 12
            volume: 64.529
            difficulty: 2.5
            level: 0.4
            effort: 161.323
            time: 8.962
            bugs: 0.01
          loc:
            sloc: 8
            ploc: 5
            lloc: 0
            cloc: 0
            blank: 3
            sloc_average: 8
            ploc_average: 5
            lloc_average: 0
            cloc_average: 0
            blank_average: 3
            sloc_min: 8
            sloc_max: 8
            cloc_min: 0
            cloc_max: 0
            ploc_min: 5
            ploc_max: 5
            lloc_min: 0
            lloc_max: 0
            blank_min: 3
            blank_max: 3
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 22
            average: 22
            min: 22
            max: 22
          mi:
            original: 115.414
            sei: 90.908
            visual_studio: 67.494
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 5
        total_operators: 13
        unique_operands: 8
        total_operands: 8
        length: 21
        estimated_program_length: 35.61
        purity_ratio: 1.696
        vocabulary: 13
        volume: 77.709
        difficulty: 2.5
        level: 0.4
        effort: 194.273
        time: 10.793
        bugs: 0.011
      loc:
        sloc: 8
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 3
        sloc_average: 4
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 1.5
        sloc_min: 8
        sloc_max: 8
        cloc_min: 0
        cloc_max: 0
        ploc_min: 5
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 3
        blank_max: 3
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 26
        average: 13
        min: 4
        max: 22
      mi:
        original: 114.218
        sei: 89.284
        visual_studio: 66.794
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 5
    total_operators: 13
    unique_operands: 9
    total_operands: 10
    length: 23
    estimated_program_length: 40.139
    purity_ratio: 1.745
    vocabulary: 14
    volume: 87.569
    difficulty: 2.778
    level: 0.36
    effort: 243.248
    time: 13.514
    bugs: 0.013
  loc:
    sloc: 18
    ploc: 13
    lloc: 0
    cloc: 2
    blank: 5
    sloc_average: 6
    ploc_average: 4.333
    lloc_average: 0
    cloc_average: 0.667
    blank_average: 1.667
    sloc_min: 8
    sloc_max: 18
    cloc_min: 0
    cloc_max: 2
    ploc_min: 5
    ploc_max: 13
    lloc_min: 0
    lloc_max: 0
    blank_min: 3
    blank_max: 5
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 41
    average: 13.667
    min: 4
    max: 22
  mi:
    original: 100.229
    sei: 24.217
    visual_studio: 58.614
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
