snapshots/DeepSpeech/native_client/kenlm/lm/interpolate/tune_weights.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 33
kind: unit
spaces:
  - name: lm
    start_line: 15
    end_line: 33
    kind: namespace
    spaces:
      - name: interpolate
        start_line: 15
        end_line: 33
        kind: namespace
        spaces:
          - name: TuneWeights
            start_line: 16
            end_line: 32
            kind: function
            spaces: []
            metrics:
              nargs:
                function_args: 4
                closure_args: 0
                function_args_average: 4
                closure_args_average: 0
                total: 4
                value: 4
                average: 4
                function_args_min: 4
                function_args_max: 4
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 3
                value: 3
                average: 3
                min: 3
                max: 3
              cyclomatic:
                sum: 3
                value: 3
                average: 3
                min: 3
                max: 3
                modified:
                  sum: 3
                  value: 3
                  average: 3
                  min: 3
                  max: 3
              halstead:
                unique_operators: 20
                total_operators: 92
                unique_operands: 36
                total_operands: 70
                length: 162
                estimated_program_length: 272.556
                purity_ratio: 1.682
                vocabulary: 56
                volume: 940.791
                difficulty: 19.444
                level: 0.051
                effort: 18293.168
                time: 1016.287
                bugs: 0.231
              loc:
                sloc: 17
                ploc: 16
                lloc: 12
                cloc: 2
                blank: 0
                sloc_average: 17
                ploc_average: 16
                lloc_average: 12
                cloc_average: 2
                blank_average: 0
                sloc_min: 17
                sloc_max: 17
                cloc_min: 2
                cloc_max: 2
                ploc_min: 16
                ploc_max: 16
                lloc_min: 12
                lloc_max: 12
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 203
                average: 203
                min: 203
                max: 203
              mi:
                original: 88.809
                sei: 11.499
                visual_studio: 51.935
              abc:
                assignments: 6
                branches: 11
                conditions: 2
                magnitude: 12.689
                value: 12.689
                assignments_average: 6
                branches_average: 11
                conditions_average: 2
                assignments_min: 6
                assignments_max: 6
                branches_min: 11
                branches_max: 11
                conditions_min: 2
                conditions_max: 2
        metrics:
          nargs:
            function_args: 4
            closure_args: 0
            function_args_average: 4
            closure_args_average: 0
            total: 4
            value: 0
            average: 4
            function_args_min: 0
            function_args_max: 4
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 3
            value: 0
            average: 3
            min: 0
            max: 3
          cyclomatic:
            sum: 4
            value: 1
            average: 4
            min: 1
            max: 3
            modified:
              sum: 4
              value: 1
              average: 4
              min: 1
              max: 3
          halstead:
            unique_operators: 21
            total_operators: 94
            unique_operands: 37
            total_operands: 71
            length: 165
            estimated_program_length: 284.988
            purity_ratio: 1.727
            vocabulary: 58
            volume: 966.567
            difficulty: 20.149
            level: 0.05
            effort: 19475.016
            time: 1081.945
            bugs: 0.241
          loc:
            sloc: 19
            ploc: 18
            lloc: 12
            cloc: 2
            blank: 0
            sloc_average: 9.5
            ploc_average: 9
            lloc_average: 6
            cloc_average: 1
            blank_average: 0
            sloc_min: 17
            sloc_max: 19
            cloc_min: 2
            cloc_max: 2
            ploc_min: 16
            ploc_max: 18
            lloc_min: 12
            lloc_max: 12
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 0.5
            closures_average: 0
            total: 1
            average: 0.5
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 207
            average: 103.5
            min: 4
            max: 203
          mi:
            original: 86.637
            sei: 2.139
            visual_studio: 50.665
          abc:
            assignments: 6
            branches: 11
            conditions: 2
            magnitude: 12.689
            value: 0
            assignments_average: 3
            branches_average: 5.5
            conditions_average: 1
            assignments_min: 0
            assignments_max: 6
            branches_min: 0
            branches_max: 11
            conditions_min: 0
            conditions_max: 2
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 4
        closure_args: 0
        function_args_average: 4
        closure_args_average: 0
        total: 4
        value: 0
        average: 4
        function_args_min: 0
        function_args_max: 4
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 3
        value: 0
        average: 3
        min: 0
        max: 3
      cyclomatic:
        sum: 5
        value: 1
        average: 5
        min: 1
        max: 3
        modified:
          sum: 5
          value: 1
          average: 5
          min: 1
          max: 3
      halstead:
        unique_operators: 21
        total_operators: 96
        unique_operands: 38
        total_operands: 72
        length: 168
        estimated_program_length: 291.66
        purity_ratio: 1.736
        vocabulary: 59
        volume: 988.284
        difficulty: 19.895
        level: 0.05
        effort: 19661.651
        time: 1092.314
        bugs: 0.243
      loc:
        sloc: 19
        ploc: 18
        lloc: 12
        cloc: 2
        blank: 0
        sloc_average: 6.333
        ploc_average: 6
        lloc_average: 4
        cloc_average: 0.667
        blank_average: 0
        sloc_min: 17
        sloc_max: 19
        cloc_min: 2
        cloc_max: 2
        ploc_min: 16
        ploc_max: 18
        lloc_min: 12
        lloc_max: 12
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.333
        closures_average: 0
        total: 1
        average: 0.333
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 211
        average: 70.333
        min: 4
        max: 203
      mi:
        original: 86.291
        sei: 1.742
        visual_studio: 50.463
      abc:
        assignments: 6
        branches: 11
        conditions: 2
        magnitude: 12.689
        value: 0
        assignments_average: 2
        branches_average: 3.667
        conditions_average: 0.667
        assignments_min: 0
        assignments_max: 6
        branches_min: 0
        branches_max: 11
        conditions_min: 0
        conditions_max: 2
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 4
    closure_args: 0
    function_args_average: 4
    closure_args_average: 0
    total: 4
    value: 0
    average: 4
    function_args_min: 0
    function_args_max: 4
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 3
    value: 0
    average: 3
    min: 0
    max: 3
  cyclomatic:
    sum: 6
    value: 1
    average: 6
    min: 1
    max: 3
    modified:
      sum: 6
      value: 1
      average: 6
      min: 1
      max: 3
  halstead:
    unique_operators: 21
    total_operators: 96
    unique_operands: 41
    total_operands: 75
    length: 171
    estimated_program_length: 311.898
    purity_ratio: 1.824
    vocabulary: 62
    volume: 1018.168
    difficulty: 19.207
    level: 0.052
    effort: 19556.267
    time: 1086.459
    bugs: 0.242
  loc:
    sloc: 33
    ploc: 28
    lloc: 12
    cloc: 3
    blank: 4
    sloc_average: 8.25
    ploc_average: 7
    lloc_average: 3
    cloc_average: 0.75
    blank_average: 1
    sloc_min: 17
    sloc_max: 33
    cloc_min: 2
    cloc_max: 3
    ploc_min: 16
    ploc_max: 28
    lloc_min: 12
    lloc_max: 12
    blank_min: 0
    blank_max: 4
  nom:
    functions: 1
    closures: 0
    functions_average: 0.25
    closures_average: 0
    total: 1
    average: 0.25
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 237
    average: 59.25
    min: 4
    max: 203
  mi:
    original: 76.963
    sei: -14.013
    visual_studio: 45.007
  abc:
    assignments: 6
    branches: 11
    conditions: 2
    magnitude: 12.689
    value: 0
    assignments_average: 1.5
    branches_average: 2.75
    conditions_average: 0.5
    assignments_min: 0
    assignments_max: 6
    branches_min: 0
    branches_max: 11
    conditions_min: 0
    conditions_max: 2
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
