snapshots/DeepSpeech/native_client/kenlm/lm/interpolate/tune_weights.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 15
kind: unit
spaces:
  - name: lm
    start_line: 8
    end_line: 14
    kind: namespace
    spaces:
      - name: interpolate
        start_line: 8
        end_line: 14
        kind: namespace
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 12
            total_operators: 20
            unique_operands: 9
            total_operands: 11
            length: 31
            estimated_program_length: 71.549
            purity_ratio: 2.308
            vocabulary: 21
            volume: 136.162
            difficulty: 7.333
            level: 0.136
            effort: 998.52
            time: 55.473
            bugs: 0.033
          loc:
            sloc: 7
            ploc: 4
            lloc: 1
            cloc: 1
            blank: 2
            sloc_average: 7
            ploc_average: 4
            lloc_average: 1
            cloc_average: 1
            blank_average: 2
            sloc_min: 7
            sloc_max: 7
            cloc_min: 1
            cloc_max: 1
            ploc_min: 4
            ploc_max: 4
            lloc_min: 1
            lloc_max: 1
            blank_min: 2
            blank_max: 2
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 38
            average: 38
            min: 38
            max: 38
          mi:
            original: 113.694
            sei: 67.684
            visual_studio: 66.488
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 21
        unique_operands: 10
        total_operands: 12
        length: 33
        estimated_program_length: 76.239
        purity_ratio: 2.31
        vocabulary: 22
        volume: 147.161
        difficulty: 7.2
        level: 0.139
        effort: 1059.561
        time: 58.864
        bugs: 0.035
      loc:
        sloc: 7
        ploc: 4
        lloc: 1
        cloc: 1
        blank: 2
        sloc_average: 3.5
        ploc_average: 2
        lloc_average: 0.5
        cloc_average: 0.5
        blank_average: 1
        sloc_min: 7
        sloc_max: 7
        cloc_min: 1
        cloc_max: 1
        ploc_min: 4
        ploc_max: 4
        lloc_min: 1
        lloc_max: 1
        blank_min: 2
        blank_max: 2
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 42
        average: 21
        min: 4
        max: 38
      mi:
        original: 113.06
        sei: 66.872
        visual_studio: 66.117
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 12
    total_operators: 21
    unique_operands: 12
    total_operands: 15
    length: 36
    estimated_program_length: 86.039
    purity_ratio: 2.39
    vocabulary: 24
    volume: 165.059
    difficulty: 7.5
    level: 0.133
    effort: 1237.94
    time: 68.774
    bugs: 0.038
  loc:
    sloc: 15
    ploc: 9
    lloc: 1
    cloc: 3
    blank: 5
    sloc_average: 5
    ploc_average: 3
    lloc_average: 0.333
    cloc_average: 1
    blank_average: 1.667
    sloc_min: 7
    sloc_max: 15
    cloc_min: 1
    cloc_max: 3
    ploc_min: 4
    ploc_max: 9
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 5
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 53
    average: 17.667
    min: 4
    max: 38
  mi:
    original: 99.887
    sei: 98.771
    visual_studio: 58.413
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
